   win32-config.h, wscript:
   Version bump for Geany 0.20.1.
 * *.*:
   Update copyright information.
 * AUTHORS, src/about.c, README.Packagers, README:
   Welcome Colomban Wendling, a new Geany developer.
 * src/editor.c:
   Ensure the editor widget has the focus when the editor menu is
   called.
 * tagmanager/php.c:
   Fix memory leaks (reported by an anonymous IRC user).


2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * New release: Geany 0.20 "Disra".


2011-01-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Add debug message with the number of compatible plugins in each
   plugin search path when showing the Plugin Manager dialog.


2010-12-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Move and update 'Custom filetypes' section.
   Add 'Creating a custom filetype from an existing filetype' section.


2010-12-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, geany.glade:
   Add Edit->Insert Alternative White Space menu item (was previously
   removed from Edit->Commands submenu).


2010-12-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Split Preferences dialog Interface tab into subnotebook to reduce
   height of dialog (fixes #3141277). Reuses existing strings.
 * src/editor.c:
   Scroll to the current line when moving the cursor to the next
   cursor position in a snippet (#3139490).
 * doc/geany.txt, doc/geany.html:
   Add short 'View menu' section and 'Color schemes menu' section.
 * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add filetypes_get_display_name() to API.


2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Reduce Set Build Commands dialog column 1 width by using '#' label.
   Fix memory leak.
 * src/build.c: